--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "gcode-sender",
+  "name": "gcode-sender DEV",
   "version": "2015.9.9.0",
   "manifest_version": 2,
   "minimum_chrome_version": "33",
